[releng] add ecoretools for contextual explorer
fix issue with juno platform

Change-Id: I5fadf3e2e61ab401d67d015f7458e2b12e093eb2
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>