@@ -368,24 +368,24 @@ This file was generated by Eclipse EGF
 	
 	<target name="all" depends="CleanStep_1,TP_mars,TP_build,releng,copy_egf_to_tools_folder,emde,PublishStep_7,emde_feature,diagrams,PublishStep_10,diagrams_representation_feature,docgen,PublishStep_13,docgen_features,ad,PublishStep_16,ad_feature,ad_dsl,PublishStep_19,PublishStep_20,addsl_feature,examples,PublishStep_23,PublishStep_24,PublishStep_25,BuildStep_26,PublishStep_27,EgfStep_28,BuildStep_29,PublishStep_30,BuildStep_31,EgfStep_32,BuildStep_33,PublishStep_34,BuildStep_35,EgfStep_36,BuildStep_37,PublishStep_38,BuildStep_39,PublishStep_40,PublishStep_41,kitalpha_sdk,TP_win32-win32-x86,TP_win32-win32-x86_64,TP_linux-gtk-x86,TP_linux-gtk-x86_64,TP_macosx-cocoa-x86_64,AntStep_48" />
 	<target name="TP_mars" depends="TP_mars_setup_kitalpha_runtime_platform" />
-	<target name="TP_mars_setup_kitalpha_runtime_platform" depends="TP_mars_setup_kitalpha_runtime_platform_setup_platform,TP_mars_setup_kitalpha_runtime_platform_install_runtime_features" />
+	<target name="TP_mars_setup_kitalpha_runtime_platform" depends="TP_mars_setup_kitalpha_runtime_platform_setup_platform,TP_mars_setup_kitalpha_runtime_platform_install_ecoretools2_for_contextual_explorer,TP_mars_setup_kitalpha_runtime_platform_install_runtime_features" />
 	<target name="TP_mars_setup_kitalpha_runtime_platform_setup_platform" depends="TP_mars_setup_kitalpha_runtime_platform_setup_platform_TP_mars,TP_mars_setup_kitalpha_runtime_platform_setup_platform_install_cots_features,TP_mars_setup_kitalpha_runtime_platform_setup_platform_install_sirius_features,TP_mars_setup_kitalpha_runtime_platform_setup_platform_install_diffmerge,TP_mars_setup_kitalpha_runtime_platform_setup_platform_install_amalgam_features,TP_mars_setup_kitalpha_runtime_platform_setup_platform_install_ecoretools2" />
 	<target name="TP_build" depends="TP_build_install_egf_TP_build" />
 	<target name="releng" depends="releng_BuildStep_1,releng_PublishStep_2,releng_build_feature" />
 	<target name="TP_win32-win32-x86" depends="TP_win32-win32-x86_setup_kitalpha_runtime_platform,TP_win32-win32-x86_install_kitalpha,TP_win32-win32-x86_EgfStep_3,TP_win32-win32-x86_zip_mars_results" />
-	<target name="TP_win32-win32-x86_setup_kitalpha_runtime_platform" depends="TP_win32-win32-x86_setup_kitalpha_runtime_platform_setup_platform,TP_win32-win32-x86_setup_kitalpha_runtime_platform_install_runtime_features" />
+	<target name="TP_win32-win32-x86_setup_kitalpha_runtime_platform" depends="TP_win32-win32-x86_setup_kitalpha_runtime_platform_setup_platform,TP_win32-win32-x86_setup_kitalpha_runtime_platform_install_ecoretools2_for_contextual_explorer,TP_win32-win32-x86_setup_kitalpha_runtime_platform_install_runtime_features" />
 	<target name="TP_win32-win32-x86_setup_kitalpha_runtime_platform_setup_platform" depends="TP_win32-win32-x86_setup_kitalpha_runtime_platform_setup_platform_TP_win32-win32-x86,TP_win32-win32-x86_setup_kitalpha_runtime_platform_setup_platform_install_cots_features,TP_win32-win32-x86_setup_kitalpha_runtime_platform_setup_platform_install_sirius_features,TP_win32-win32-x86_setup_kitalpha_runtime_platform_setup_platform_install_diffmerge,TP_win32-win32-x86_setup_kitalpha_runtime_platform_setup_platform_install_amalgam_features,TP_win32-win32-x86_setup_kitalpha_runtime_platform_setup_platform_install_ecoretools2" />
 	<target name="TP_win32-win32-x86_64" depends="TP_win32-win32-x86_64_setup_kitalpha_runtime_platform,TP_win32-win32-x86_64_install_kitalpha,TP_win32-win32-x86_64_EgfStep_3,TP_win32-win32-x86_64_zip_mars_results" />
-	<target name="TP_win32-win32-x86_64_setup_kitalpha_runtime_platform" depends="TP_win32-win32-x86_64_setup_kitalpha_runtime_platform_setup_platform,TP_win32-win32-x86_64_setup_kitalpha_runtime_platform_install_runtime_features" />
+	<target name="TP_win32-win32-x86_64_setup_kitalpha_runtime_platform" depends="TP_win32-win32-x86_64_setup_kitalpha_runtime_platform_setup_platform,TP_win32-win32-x86_64_setup_kitalpha_runtime_platform_install_ecoretools2_for_contextual_explorer,TP_win32-win32-x86_64_setup_kitalpha_runtime_platform_install_runtime_features" />
 	<target name="TP_win32-win32-x86_64_setup_kitalpha_runtime_platform_setup_platform" depends="TP_win32-win32-x86_64_setup_kitalpha_runtime_platform_setup_platform_TP_win32-win32-x86_64,TP_win32-win32-x86_64_setup_kitalpha_runtime_platform_setup_platform_install_cots_features,TP_win32-win32-x86_64_setup_kitalpha_runtime_platform_setup_platform_install_sirius_features,TP_win32-win32-x86_64_setup_kitalpha_runtime_platform_setup_platform_install_diffmerge,TP_win32-win32-x86_64_setup_kitalpha_runtime_platform_setup_platform_install_amalgam_features,TP_win32-win32-x86_64_setup_kitalpha_runtime_platform_setup_platform_install_ecoretools2" />
 	<target name="TP_linux-gtk-x86" depends="TP_linux-gtk-x86_setup_kitalpha_runtime_platform,TP_linux-gtk-x86_install_kitalpha,TP_linux-gtk-x86_EgfStep_3,TP_linux-gtk-x86_tar_juno_results" />
-	<target name="TP_linux-gtk-x86_setup_kitalpha_runtime_platform" depends="TP_linux-gtk-x86_setup_kitalpha_runtime_platform_setup_platform,TP_linux-gtk-x86_setup_kitalpha_runtime_platform_install_runtime_features" />
+	<target name="TP_linux-gtk-x86_setup_kitalpha_runtime_platform" depends="TP_linux-gtk-x86_setup_kitalpha_runtime_platform_setup_platform,TP_linux-gtk-x86_setup_kitalpha_runtime_platform_install_ecoretools2_for_contextual_explorer,TP_linux-gtk-x86_setup_kitalpha_runtime_platform_install_runtime_features" />
 	<target name="TP_linux-gtk-x86_setup_kitalpha_runtime_platform_setup_platform" depends="TP_linux-gtk-x86_setup_kitalpha_runtime_platform_setup_platform_TP_linux-gtk-x86,TP_linux-gtk-x86_setup_kitalpha_runtime_platform_setup_platform_install_cots_features,TP_linux-gtk-x86_setup_kitalpha_runtime_platform_setup_platform_install_sirius_features,TP_linux-gtk-x86_setup_kitalpha_runtime_platform_setup_platform_install_diffmerge,TP_linux-gtk-x86_setup_kitalpha_runtime_platform_setup_platform_install_amalgam_features,TP_linux-gtk-x86_setup_kitalpha_runtime_platform_setup_platform_install_ecoretools2" />
 	<target name="TP_linux-gtk-x86_64" depends="TP_linux-gtk-x86_64_setup_kitalpha_runtime_platform,TP_linux-gtk-x86_64_install_kitalpha,TP_linux-gtk-x86_64_EgfStep_3,TP_linux-gtk-x86_64_tar_mars_results" />
-	<target name="TP_linux-gtk-x86_64_setup_kitalpha_runtime_platform" depends="TP_linux-gtk-x86_64_setup_kitalpha_runtime_platform_setup_platform,TP_linux-gtk-x86_64_setup_kitalpha_runtime_platform_install_runtime_features" />
+	<target name="TP_linux-gtk-x86_64_setup_kitalpha_runtime_platform" depends="TP_linux-gtk-x86_64_setup_kitalpha_runtime_platform_setup_platform,TP_linux-gtk-x86_64_setup_kitalpha_runtime_platform_install_ecoretools2_for_contextual_explorer,TP_linux-gtk-x86_64_setup_kitalpha_runtime_platform_install_runtime_features" />
 	<target name="TP_linux-gtk-x86_64_setup_kitalpha_runtime_platform_setup_platform" depends="TP_linux-gtk-x86_64_setup_kitalpha_runtime_platform_setup_platform_TP_linux-gtk-x86_64,TP_linux-gtk-x86_64_setup_kitalpha_runtime_platform_setup_platform_install_cots_features,TP_linux-gtk-x86_64_setup_kitalpha_runtime_platform_setup_platform_install_sirius_features,TP_linux-gtk-x86_64_setup_kitalpha_runtime_platform_setup_platform_install_diffmerge,TP_linux-gtk-x86_64_setup_kitalpha_runtime_platform_setup_platform_install_amalgam_features,TP_linux-gtk-x86_64_setup_kitalpha_runtime_platform_setup_platform_install_ecoretools2" />
 	<target name="TP_macosx-cocoa-x86_64" depends="TP_macosx-cocoa-x86_64_setup_kitalpha_runtime_platform,TP_macosx-cocoa-x86_64_install_kitalpha,TP_macosx-cocoa-x86_64_EgfStep_3,TP_macosx-cocoa-x86_64_Tar_mars_results" />
-	<target name="TP_macosx-cocoa-x86_64_setup_kitalpha_runtime_platform" depends="TP_macosx-cocoa-x86_64_setup_kitalpha_runtime_platform_setup_platform,TP_macosx-cocoa-x86_64_setup_kitalpha_runtime_platform_install_runtime_features" />
+	<target name="TP_macosx-cocoa-x86_64_setup_kitalpha_runtime_platform" depends="TP_macosx-cocoa-x86_64_setup_kitalpha_runtime_platform_setup_platform,TP_macosx-cocoa-x86_64_setup_kitalpha_runtime_platform_install_ecoretools2_for_contextual_explorer,TP_macosx-cocoa-x86_64_setup_kitalpha_runtime_platform_install_runtime_features" />
 	<target name="TP_macosx-cocoa-x86_64_setup_kitalpha_runtime_platform_setup_platform" depends="TP_macosx-cocoa-x86_64_setup_kitalpha_runtime_platform_setup_platform_TP_macosx-cocoa-x86_64,TP_macosx-cocoa-x86_64_setup_kitalpha_runtime_platform_setup_platform_install_cots_features,TP_macosx-cocoa-x86_64_setup_kitalpha_runtime_platform_setup_platform_install_sirius_features,TP_macosx-cocoa-x86_64_setup_kitalpha_runtime_platform_setup_platform_install_diffmerge,TP_macosx-cocoa-x86_64_setup_kitalpha_runtime_platform_setup_platform_install_amalgam_features,TP_macosx-cocoa-x86_64_setup_kitalpha_runtime_platform_setup_platform_install_ecoretools2" />
 	<target name="CleanStep_1" >
 		<antcall target="clean.result" />
@@ -1863,7 +1863,39 @@ This file was generated by Eclipse EGF
 
 
                 <arg value="-i" />
-                <arg value="org.eclipse.emf.ecoretools.sdk.feature.group" />
+                <arg value="org.eclipse.emf.ecoretools.sdk.feature.group" />                
+
+
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="TP_mars_setup_kitalpha_runtime_platform_install_ecoretools2_for_contextual_explorer" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_mars" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${ecoretools2.repo.url}" />
+                <arg value="-r" />
+                <arg value="${sirius.repo.url}" />
+                <arg value="-r" />
+                <arg value="${eclipse.download.prefix}/releases/${eclipse_version}" />
+
+
                 <arg value="-i" />
                 <arg value="org.eclipse.emf.ecoretools.explorer.contextual.feature.group" />                
 
@@ -2435,7 +2467,39 @@ This file was generated by Eclipse EGF
 
 
                 <arg value="-i" />
-                <arg value="org.eclipse.emf.ecoretools.sdk.feature.group" />
+                <arg value="org.eclipse.emf.ecoretools.sdk.feature.group" />                
+
+
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="TP_win32-win32-x86_setup_kitalpha_runtime_platform_install_ecoretools2_for_contextual_explorer" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_win32-win32-x86" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${ecoretools2.repo.url}" />
+                <arg value="-r" />
+                <arg value="${sirius.repo.url}" />
+                <arg value="-r" />
+                <arg value="${eclipse.download.prefix}/releases/${eclipse_version}" />
+
+
                 <arg value="-i" />
                 <arg value="org.eclipse.emf.ecoretools.explorer.contextual.feature.group" />                
 
@@ -2889,7 +2953,39 @@ This file was generated by Eclipse EGF
 
 
                 <arg value="-i" />
-                <arg value="org.eclipse.emf.ecoretools.sdk.feature.group" />
+                <arg value="org.eclipse.emf.ecoretools.sdk.feature.group" />                
+
+
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="TP_win32-win32-x86_64_setup_kitalpha_runtime_platform_install_ecoretools2_for_contextual_explorer" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_win32-win32-x86_64" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${ecoretools2.repo.url}" />
+                <arg value="-r" />
+                <arg value="${sirius.repo.url}" />
+                <arg value="-r" />
+                <arg value="${eclipse.download.prefix}/releases/${eclipse_version}" />
+
+
                 <arg value="-i" />
                 <arg value="org.eclipse.emf.ecoretools.explorer.contextual.feature.group" />                
 
@@ -3343,7 +3439,39 @@ This file was generated by Eclipse EGF
 
 
                 <arg value="-i" />
-                <arg value="org.eclipse.emf.ecoretools.sdk.feature.group" />
+                <arg value="org.eclipse.emf.ecoretools.sdk.feature.group" />                
+
+
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="TP_linux-gtk-x86_setup_kitalpha_runtime_platform_install_ecoretools2_for_contextual_explorer" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_linux-gtk-x86" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${ecoretools2.repo.url}" />
+                <arg value="-r" />
+                <arg value="${sirius.repo.url}" />
+                <arg value="-r" />
+                <arg value="${eclipse.download.prefix}/releases/${eclipse_version}" />
+
+
                 <arg value="-i" />
                 <arg value="org.eclipse.emf.ecoretools.explorer.contextual.feature.group" />                
 
@@ -3797,7 +3925,39 @@ This file was generated by Eclipse EGF
 
 
                 <arg value="-i" />
-                <arg value="org.eclipse.emf.ecoretools.sdk.feature.group" />
+                <arg value="org.eclipse.emf.ecoretools.sdk.feature.group" />                
+
+
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="TP_linux-gtk-x86_64_setup_kitalpha_runtime_platform_install_ecoretools2_for_contextual_explorer" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_linux-gtk-x86_64" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${ecoretools2.repo.url}" />
+                <arg value="-r" />
+                <arg value="${sirius.repo.url}" />
+                <arg value="-r" />
+                <arg value="${eclipse.download.prefix}/releases/${eclipse_version}" />
+
+
                 <arg value="-i" />
                 <arg value="org.eclipse.emf.ecoretools.explorer.contextual.feature.group" />                
 
@@ -4251,7 +4411,39 @@ This file was generated by Eclipse EGF
 
 
                 <arg value="-i" />
-                <arg value="org.eclipse.emf.ecoretools.sdk.feature.group" />
+                <arg value="org.eclipse.emf.ecoretools.sdk.feature.group" />                
+
+
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="TP_macosx-cocoa-x86_64_setup_kitalpha_runtime_platform_install_ecoretools2_for_contextual_explorer" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_macosx-cocoa-x86_64" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${ecoretools2.repo.url}" />
+                <arg value="-r" />
+                <arg value="${sirius.repo.url}" />
+                <arg value="-r" />
+                <arg value="${eclipse.download.prefix}/releases/${eclipse_version}" />
+
+
                 <arg value="-i" />
                 <arg value="org.eclipse.emf.ecoretools.explorer.contextual.feature.group" />                
 
